# thr_vs_prc

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  iwoker.h  main.cpp  mtx.cpp  mtx.h  process_worker.cpp  process_worker.h  thread_worker.cpp  thread_worker.h
